<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="#001A4B"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/covid"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/medication_image" />

    <Button
        android:id="@+id/pickimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/adddisease"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/disease_name"
        android:layout_above="@+id/addmedication"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:background="#ffffff"
        />


    <EditText
        android:id="@+id/addmedication"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:inputType="textMultiLine"
        android:layout_above="@+id/upload"
        android:scrollbars = "vertical"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/type_medication_here"
        android:background="#ffffff"
        />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />



</RelativeLayout>