<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001A4B"
    tools:context=".VoteMedicine">



    <TextView
        android:id="@+id/disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_name"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:srcCompat="@drawable/covid"
        android:layout_below="@+id/disease"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medication"
        android:layout_below="@+id/imageView2"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/helpfull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/helpfull"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            />

        <Button
            android:id="@+id/nothelpfull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_helpfull"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
</RelativeLayout>