<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001A4B"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/yes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:padding="25dp"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#ffffff"
        />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_below="@+id/yes"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="25dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_quiz"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="80dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:max="100"
        android:progress="0"
        android:theme="@style/progressBar"
        android:background="#ffffff"
        />

</RelativeLayout>